infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dpp
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
