infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '120'
spec:
  ingressClassName: nginx
  tls:
    - secretName: dpp-tls
      hosts:
        - viewer.example
        - console.example
        - api.example
  rules:
    - host: viewer.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dpp-web-public
                port:
                  number: 80
    - host: console.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dpp-web-console
                port:
                  number: 80
    - host: api.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dpp-api
                port:
                  number: 80
